Fix rainbow text clipping from tight line-height

--- a/apps/supaterm.com/src/index.css
+++ b/apps/supaterm.com/src/index.css
@@ -165,6 +165,8 @@
 }
 
 .rainbow-text {
+  padding-block: 0.1em;
+  margin-block: -0.1em;
   background: linear-gradient(
     90deg,
     rgb(235, 95, 87),
